<resources>
    <string name="app_name">NontonSlur</string>
    <string name="LogIn">LogIn</string>
    <string name="SignUp">SignUp</string>
    <string name="SignIn">SignIn</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Email_or_Username">Email or Username</string>
    <string name="Belum_punya_akun">Belum punya akun?</string>
    <string name="Sudah_punya_akun">Sudah punya akun?</string>
    <string name="Setuju_dengan_persyaratan_yang_ada">Setuju dengan persyaratan yang ada</string>
    <string name="LogOut">Log Out</string>
    <string name="Nonton">Nonton</string>
    <string name="Slur">Slur</string>
    <string name="main_logo">main_logo</string>
    <string name="profilepic">profilepic</string>
    <string name="status_premium">Status Premium :</string>
    <string name="tanggal_expired">0 days</string>
    <string name="status">silver</string>
    <string name="pilih_paket">Pilih Paket Premium</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="bronze_desc">+1 Day Premium\nRp\n3.000</string>
    <string name="silver_desc">+1 Week Premium\nRp\n15.000</string>
    <string name="gold_desc">+1 Month Premium\nRp\n50.000</string>
    <string name="none">none</string>
    <string name="Transaksi_Berhasil">Transaksi Berhasil</string>
    <string name="Rincian">Rincian :</string>
    <string name="harga">Rp.15000</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggal_desc">13-11-2022</string>
    <string name="keterangan">Pembelian Paket Silver</string>
    <string name="total">Total :</string>
    <string name="beranda">beranda</string>
    <string name="simple_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed felis ac velit venenatis gravida quis quis dui. Aenean sed tortor felis. Integer rutrum porttitor mi. Cras hendrerit diam nec turpis accumsan efficitur. Quisque sagittis nibh non tellus congue molestie. Donec imperdiet libero massa, auctor sollicitudin est malesuada a. Etiam vel commodo elit. Sed vitae lectus sed ipsum congue congue eu a sem. Maecenas vel mi elit. Nulla nec justo nunc. Maecenas vitae erat imperdiet, auctor libero vel, dapibus augue.</string>
</resources>