<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/loginlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/Nonton"
        android:textColor="#FFAB01"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/Slur"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="520dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/SignUp"
            android:textColor="#FFAB01"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="214dp"
            android:layout_height="44dp"
            android:layout_margin="5dp"
            android:background="@drawable/fill_rectangel"
            android:fontFamily="@font/poppinssemibold"
            android:hint="@string/Email"
            android:padding="10dp"
            android:textColor="#1B191C"
            android:textSize="14sp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="214dp"
            android:layout_height="44dp"
            android:layout_margin="5dp"
            android:background="@drawable/fill_rectangel"
            android:fontFamily="@font/poppinssemibold"
            android:hint="@string/Username"
            android:padding="10dp"
            android:textColor="#1B191C"
            android:textSize="14sp"
            android:autofillHints="username"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="214dp"
            android:layout_height="44dp"
            android:layout_margin="5dp"
            android:background="@drawable/fill_rectangel"
            android:fontFamily="@font/poppinssemibold"
            android:hint="@string/Password"
            android:padding="10dp"
            android:textColor="#1B191C"
            android:textSize="14sp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="214dp"
            android:layout_height="44dp"
            android:layout_margin="5dp"
            android:background="@drawable/fill_rectangel"
            android:fontFamily="@font/poppinssemibold"
            android:hint="@string/ConfirmPassword"
            android:padding="10dp"
            android:textColor="#1B191C"
            android:textSize="14sp"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:buttonTint="#FFAB01"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/Setuju_dengan_persyaratan_yang_ada"
            android:textColor="#FFFFFF"
            android:textSize="8sp" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="214dp"
            android:layout_height="54dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="#FFAB01"
            android:fontFamily="@font/poppinsbold"
            android:padding="10dp"
            android:text="@string/SignUp"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/Sudah_punya_akun"
            android:textColor="#FFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-21dp"
            android:layout_marginStart="130dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/LogIn"
            android:textColor="#FFAB01"
            android:textSize="12sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>