<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#212121"
    tools:context=".MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/loginlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/main_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/Nonton"
        android:textColor="#FFAB01"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/Slur"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:src="@drawable/rectangle3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/none" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lingkaran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.210"
        android:contentDescription="@string/none" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lingkaran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.220"
        app:tint="#212121"
        android:contentDescription="@string/none" />

    <Button
        android:id="@+id/confirm_button1"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:backgroundTint="#FFAB01"
        android:fontFamily="@font/poppinsbold"
        android:padding="10dp"
        android:text="@string/beranda"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="740dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/box"
        android:layout_alignBottom="@id/box"
        android:layout_marginTop="560dp"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp"
        android:text= "@string/total"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/box"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/tanggal_desc"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rec_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/box"
        android:layout_marginTop="425dp"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/keterangan"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/check_circle"
        android:layout_marginTop="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFAB01"
        android:contentDescription="@string/none" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/box"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/tanggal"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/box"
        android:layout_alignBottom="@id/box"
        android:layout_marginTop="560dp"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp"
        android:text="@string/harga"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/box"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/poppinsregular"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/Rincian"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/Transaksi_Berhasil"
        android:textColor="#FFFF"
        android:textSize="16sp"
        android:layout_marginTop="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>